# bottom-hs

./: .ghci  CHANGELOG.md  LICENSE  README.md  bottom.cabal  hie.yaml
.github/workflows/: main.yml
bench/: Main.hs
cmd/bottom/: Main.hs
src/Data/Encoding/: Bottom.hs
test/: Main.hs
