cabal-version: 3.0
name:          bottom
version:       0.1.0.0
build-type:    Simple

common lang
  build-depends:      base ^>=4.14
  default-language:   Haskell2010
  default-extensions:
    OverloadedStrings
    StrictData

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library
  import:          lang
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Data.Encoding.Bottom

  build-depends:
    , bytestring  ==0.11.1.0
    , text        ==1.2.4.1

test-suite tests
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
  build-depends:
    , bottom
    , hspec   ==2.7.8
    , text        ==1.2.4.1

executable bottom
  import:         lang
  ghc-options:    -threaded -with-rtsopts=-N
  hs-source-dirs: cmd/bottom
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/bottom -Main
  other-modules:
  build-depends:
    , bottom
    , optparse-applicative  ==0.16.1.0
