cabal-version:      3.0
name:               bottom
version:            0.2.1.0
synopsis:           Encoding and decoding for the Bottom spec.
description:
  Encoding and decoding for the [Bottom spec](https://github.com/bottom-software-foundation/spec).

license:            Apache-2.0
license-file:       LICENSE
author:             Eliza Zhang
maintainer:         eliza@elizazhang.com
copyright:          2026 Eliza Zhang
category:           Codec
build-type:         Simple
homepage:           https://github.com/bottom-software-foundation/bottom-hs
bug-reports:
  https://github.com/bottom-software-foundation/bottom-hs/issues

tested-with:        GHC ==8.10.4
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: git://github.com/bottom-software-foundation/bottom-hs.git

common lang
  build-depends:    base >=4.14 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

common deps
  build-depends:
    , bytestring
    , text

library
  import:          lang
  import:          deps
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules: Data.Encoding.Bottom
  build-depends:
    , deepseq
    , megaparsec  ^>=9.0.1

test-suite tests
  import:         lang
  import:         deps
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
  build-depends:
    , bottom
    , hspec       >=2.7.8 && <3
    , QuickCheck  >=2.14.2 && <3

benchmark bench
  import:         lang
  import:         deps
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs

  -- cabal-fmt expand bench -Main
  other-modules:
  build-depends:
    , bottom
    , criterion  >=1.5.9.0 && <2
    , deepseq

executable bottom
  import:         lang
  import:         deps
  ghc-options:    -threaded -with-rtsopts=-N
  hs-source-dirs: cmd/bottom
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/bottom -Main
  other-modules:
  build-depends:
    , bottom
    , optparse-applicative  >=0.16.1.0 && <1
